After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702465 - playsink: Fix the block diagram of deinterlace bin.
playsink: Fix the block diagram of deinterlace bin.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.1.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-06-17 13:59 UTC by sreerenj
Modified: 2013-06-17 14:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
playsink: Fix the block diagram of deinterlace bin. (2.17 KB, patch)
2013-06-17 13:59 UTC, sreerenj
none Details | Review

Description sreerenj 2013-06-17 13:59:52 UTC
Created attachment 247034 [details] [review]
playsink: Fix the block diagram of deinterlace bin.

playsink: Fix the block diagram of deinterlace bin.
Comment 1 Wim Taymans 2013-06-17 14:29:32 UTC
commit 8a2dbeb1eff9db1405146303c88c89e554b91335
Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com>
Date:   Mon Jun 17 16:02:41 2013 +0300

    playsink: Fix the block diagram of deinterlace bin.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=702465