playsink: Fix the block diagram of deinterlace bin.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=702465